Front-end error fixes and changing branch naming in back-end to avoid overlapping names

--- a/src/assets/scss/components/_frame.scss
+++ b/src/assets/scss/components/_frame.scss
@@ -125,23 +125,21 @@
     }
 
     .metrics {
-        :first-child {
-            list-style: none;
-        }
-
-        li::marker {
-            color: $default-green;
-        }
-
+        list-style: none;
+        color: $default-green;
         font-size: 0.75rem;
         text-align: center;
         padding: 0;
         display: flex;
-        gap: 1rem;
+        gap: 0.5rem;
+
+        >li{
+            color: $default-font-color;
+        }
 
         @media screen and (max-width: $screen-lg) {
             font-size: 0.65rem;
-            gap: 0.75rem;
+            gap: 0.25rem;
         }
     }
 }
