--- a/src/assets/scss/core/_fonts.scss
+++ b/src/assets/scss/core/_fonts.scss
@@ -1,15 +1,7 @@
 @font-face {
     font-family: "Lato";
-    src: url("../../fonts/Lato-BoldItalic.woff2") format("woff2"),
-        url("../../fonts/Lato-BoldItalic.woff") format("woff");
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Lato";
-    src: url("../../fonts/Lato-Black.woff2") format("woff2"),
+    src: local("Lato Black"), local("Lato-Black"),
+        url("../../fonts/Lato-Black.woff2") format("woff2"),
         url("../../fonts/Lato-Black.woff") format("woff");
     font-weight: 900;
     font-style: normal;
@@ -18,7 +10,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("../../fonts/Lato-BlackItalic.woff2") format("woff2"),
+    src: local("Lato Black Italic"), local("Lato-BlackItalic"),
+        url("../../fonts/Lato-BlackItalic.woff2") format("woff2"),
         url("../../fonts/Lato-BlackItalic.woff") format("woff");
     font-weight: 900;
     font-style: italic;
@@ -27,34 +20,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("../../fonts/Lato-Light.woff2") format("woff2"),
-        url("../../fonts/Lato-Light.woff") format("woff");
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Lato";
-    src: url("../../fonts/Lato-Regular.woff2") format("woff2"),
-        url("../../fonts/Lato-Regular.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Lato";
-    src: url("../../fonts/Lato-Italic.woff2") format("woff2"),
-        url("../../fonts/Lato-Italic.woff") format("woff");
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Lato";
-    src: url("../../fonts/Lato-LightItalic.woff2") format("woff2"),
+    src: local("Lato-LightItalic"),
+        url("../../fonts/Lato-LightItalic.woff2") format("woff2"),
         url("../../fonts/Lato-LightItalic.woff") format("woff");
     font-weight: 300;
     font-style: italic;
@@ -63,9 +30,50 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("../../fonts/Lato-Bold.woff2") format("woff2"),
+    src: local("Lato-Light"),
+        url("../../fonts/Lato-Light.woff2") format("woff2"),
+        url("../../fonts/Lato-Light.woff") format("woff");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: local("Lato Italic"), local("Lato-Italic"),
+        url("../../fonts/Lato-Italic.woff2") format("woff2"),
+        url("../../fonts/Lato-Italic.woff") format("woff");
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: local("Lato Regular"), local("Lato-Regular"),
+        url("../../fonts/Lato-Regular.woff2") format("woff2"),
+        url("../../fonts/Lato-Regular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: local("Lato Bold"), local("Lato-Bold"),
+        url("../../fonts/Lato-Bold.woff2") format("woff2"),
         url("../../fonts/Lato-Bold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: local("Lato Bold Italic"), local("Lato-BoldItalic"),
+        url("../../fonts/Lato-BoldItalic.woff2") format("woff2"),
+        url("../../fonts/Lato-BoldItalic.woff") format("woff");
+    font-weight: bold;
+    font-style: italic;
     font-display: swap;
 }
