--- a/src/assets/scss/layout/_navbar.scss
+++ b/src/assets/scss/layout/_navbar.scss
@@ -16,17 +16,13 @@ nav {
     }
 
     .paths {
-        :first-child {
-            list-style: none;
-        }
-
+        list-style: none;
         padding: 0;
         margin: 0;
         display: flex;
-        gap: 1.35rem;
+        gap: 0.75rem;
 
         @media screen and (max-width: $screen-sm) {
-            list-style: none;
             gap: 0.5rem;
         }
     }
